[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/defaults/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/menus/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/button_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/menus/options_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menus/main_menu_bg.shader" type="Shader" id=6]
[ext_resource path="res://assets/icons/cookie-grayscale.png" type="Texture" id=7]
[ext_resource path="res://assets/music/main menu.ogg" type="AudioStream" id=8]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "ui_cancel"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "ui_cancel"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "ui_cancel"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 6 )

[node name="Menus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MainMenu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -216.0
margin_right = 256.0
margin_bottom = 216.0

[node name="Title" type="Label" parent="MainMenu"]
anchor_right = 1.0
margin_top = 40.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "MENU_LABEL_TITLE"
align = 1

[node name="Buttons" type="VBoxContainer" parent="MainMenu"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 200.0
custom_constants/separation = 4

[node name="Play" type="Button" parent="MainMenu/Buttons"]
margin_right = 512.0
margin_bottom = 33.0
text = "MENU_LABEL_NEW_GAME"

[node name="Load" type="Button" parent="MainMenu/Buttons"]
margin_top = 37.0
margin_right = 512.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_IO_LOAD_GAME"

[node name="Options" type="Button" parent="MainMenu/Buttons"]
margin_top = 74.0
margin_right = 512.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_OPTIONS"

[node name="Quit" type="Button" parent="MainMenu/Buttons"]
margin_top = 111.0
margin_right = 512.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_QUIT"

[node name="SelectionPlayers" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -216.0
margin_right = 256.0
margin_bottom = 216.0

[node name="Title" type="Label" parent="SelectionPlayers"]
anchor_right = 1.0
margin_top = 40.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "MENU_LABEL_SELECT_NUM_PLAYERS"
align = 1

[node name="Buttons" type="VBoxContainer" parent="SelectionPlayers"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 200.0
custom_constants/separation = 0

[node name="VScrollBar" type="ScrollContainer" parent="SelectionPlayers/Buttons"]
margin_right = 512.0
margin_bottom = 105.0
rect_min_size = Vector2( 512, 105 )
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="Grid" type="GridContainer" parent="SelectionPlayers/Buttons/VScrollBar"]
margin_right = 512.0
size_flags_horizontal = 3
columns = 2

[node name="One" type="Button" parent="SelectionPlayers/Buttons/VScrollBar/Grid"]
margin_right = 254.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_NUM_1"

[node name="Two" type="Button" parent="SelectionPlayers/Buttons/VScrollBar/Grid"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_NUM_2"

[node name="Three" type="Button" parent="SelectionPlayers/Buttons/VScrollBar/Grid"]
margin_top = 37.0
margin_right = 254.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_NUM_3"

[node name="Four" type="Button" parent="SelectionPlayers/Buttons/VScrollBar/Grid"]
margin_left = 258.0
margin_top = 37.0
margin_right = 512.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_NUM_4"

[node name="Back" type="Button" parent="SelectionPlayers/Buttons"]
margin_top = 105.0
margin_right = 512.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 4 )
shortcut = SubResource( 2 )
text = "MENU_LABEL_BACK"

[node name="SelectionChar" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -216.0
margin_right = 256.0
margin_bottom = 216.0

[node name="Title" type="Label" parent="SelectionChar"]
anchor_right = 1.0
margin_top = 40.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "MENU_LABEL_SELECT_CHARACTER_PLAYER_1"
align = 1

[node name="Buttons" type="VBoxContainer" parent="SelectionChar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 200.0
custom_constants/separation = 0

[node name="VScrollBar" type="ScrollContainer" parent="SelectionChar/Buttons"]
margin_right = 512.0
margin_bottom = 105.0
rect_min_size = Vector2( 512, 105 )
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="Grid" type="GridContainer" parent="SelectionChar/Buttons/VScrollBar"]
margin_right = 512.0
size_flags_horizontal = 3
columns = 2

[node name="Back" type="Button" parent="SelectionChar/Buttons"]
margin_top = 105.0
margin_right = 512.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 4 )
shortcut = SubResource( 4 )
text = "MENU_LABEL_BACK"

[node name="SelectionBoard" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -216.0
margin_right = 256.0
margin_bottom = 216.0

[node name="Title" type="Label" parent="SelectionBoard"]
anchor_right = 1.0
margin_top = 40.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "MENU_LABEL_SELECT_BOARD"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SelectionBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 120.0
margin_bottom = -158.0
rect_min_size = Vector2( 512, 140 )
scroll_horizontal_enabled = false

[node name="Buttons" type="VBoxContainer" parent="SelectionBoard/ScrollContainer"]
margin_right = 512.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="LabelAward" type="Label" parent="SelectionBoard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -105.0
margin_right = -2.0
margin_bottom = -70.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_REWARD_SYSTEM"

[node name="AwardType" type="OptionButton" parent="SelectionBoard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -70.0
margin_bottom = -35.0

[node name="Back" type="Button" parent="SelectionBoard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
custom_fonts/font = ExtResource( 4 )
shortcut = SubResource( 6 )
text = "MENU_LABEL_BACK"

[node name="OptionsMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.5
margin_top = -216.0
margin_right = 255.5
margin_bottom = 216.0

[node name="Title" type="Label" parent="OptionsMenu"]
anchor_right = 1.0
margin_top = 40.0
custom_fonts/font = ExtResource( 3 )
text = "MENU_OPTIONS"
align = 1

[node name="OptionsMenu" parent="OptionsMenu" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 160.0
margin_right = 0.0
margin_bottom = 27.0

[node name="LoadGameMenu" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -216.0
margin_right = 256.0
margin_bottom = 216.0

[node name="Title" type="Label" parent="LoadGameMenu"]
anchor_right = 1.0
margin_top = 40.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "MENU_IO_LOAD_GAME"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LoadGameMenu"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 183.0
margin_bottom = -49.0
scroll_horizontal_enabled = false

[node name="Saves" type="VBoxContainer" parent="LoadGameMenu/ScrollContainer"]
margin_right = 512.0
rect_min_size = Vector2( 512, 0 )

[node name="Back" type="Button" parent="LoadGameMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -35.0
custom_fonts/font = ExtResource( 4 )
shortcut = SubResource( 8 )
text = "MENU_LABEL_BACK"

[node name="PlayerInfo1" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 136.0

[node name="Name" type="LineEdit" parent="PlayerInfo1"]
margin_right = 256.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Player 1"

[node name="Character" type="Label" parent="PlayerInfo1"]
margin_top = 41.0
margin_right = 256.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_CHARACTER"

[node name="Ready" type="Label" parent="PlayerInfo1"]
margin_top = 74.0
margin_right = 256.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_NOT_READY_ELLIPSIS"

[node name="PlayerInfo2" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -264.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 136.0

[node name="Name" type="LineEdit" parent="PlayerInfo2"]
margin_right = 256.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "Player 2"
align = 2

[node name="Character" type="Label" parent="PlayerInfo2"]
margin_top = 41.0
margin_right = 256.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_CHARACTER"
align = 2

[node name="Ready" type="Label" parent="PlayerInfo2"]
margin_top = 74.0
margin_right = 256.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_NOT_READY_ELLIPSIS"
align = 2

[node name="PlayerInfo3" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -136.0
margin_right = 264.0
margin_bottom = -8.0
alignment = 2

[node name="Name" type="LineEdit" parent="PlayerInfo3"]
margin_top = 23.0
margin_right = 256.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 4 )
text = "Player 3"

[node name="Character" type="Label" parent="PlayerInfo3"]
margin_top = 66.0
margin_right = 256.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_CHARACTER"

[node name="Ready" type="Label" parent="PlayerInfo3"]
margin_top = 99.0
margin_right = 256.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_NOT_READY_ELLIPSIS"

[node name="PlayerInfo4" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -264.0
margin_top = -136.0
margin_right = -8.0
margin_bottom = -8.0
alignment = 2

[node name="Name" type="LineEdit" parent="PlayerInfo4"]
margin_top = 23.0
margin_right = 256.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 4 )
text = "Player 4"
align = 2

[node name="Character" type="Label" parent="PlayerInfo4"]
margin_top = 66.0
margin_right = 256.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_CHARACTER"
align = 2

[node name="Ready" type="Label" parent="PlayerInfo4"]
margin_top = 99.0
margin_right = 256.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 4 )
text = "MENU_LABEL_NOT_READY_ELLIPSIS"
align = 2

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.184314, 0.729412, 0.85098, 1 )
show_behind_parent = true
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="MainMenu/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="SelectionPlayers/Buttons/VScrollBar/Grid/One" to="." method="_select_player_amount" binds= [ 1 ]]
[connection signal="pressed" from="SelectionPlayers/Buttons/VScrollBar/Grid/Two" to="." method="_select_player_amount" binds= [ 2 ]]
[connection signal="pressed" from="SelectionPlayers/Buttons/VScrollBar/Grid/Three" to="." method="_select_player_amount" binds= [ 3 ]]
[connection signal="pressed" from="SelectionPlayers/Buttons/VScrollBar/Grid/Four" to="." method="_select_player_amount" binds= [ 4 ]]
[connection signal="pressed" from="SelectionPlayers/Buttons/Back" to="." method="_on_Amount_Of_Players_Back_pressed"]
[connection signal="pressed" from="SelectionChar/Buttons/Back" to="." method="_on_SelectionChar_Back_pressed"]
[connection signal="item_selected" from="SelectionBoard/AwardType" to="." method="_on_AwardType_item_selected"]
[connection signal="pressed" from="SelectionBoard/Back" to="." method="_on_Selection_Back_pressed"]
[connection signal="quit" from="OptionsMenu/OptionsMenu" to="." method="_on_OptionsMenu_quit"]
[connection signal="pressed" from="LoadGameMenu/Back" to="." method="_on_LoadGame_Back_pressed"]
